--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
       integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
       crossorigin=""></script>
-    <title>Vite + React + TS</title>
+    <title>Guess The City</title>
   </head>
   <body>
     <div id="root"></div>
